--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -10,11 +10,11 @@
     <p><a href='logout/'>logout</a></p>
     <ul>
         <li>News</li>
-        {{news}}
+        {{news.as_table}}
         <li>Avaiable courses</li>
-        {{course_form}}
+        {{course_form.as_table}}
         <li>Deadline</li>
-        {{deadline}}
+        {{deadline.as_table}}
 
     </ul>
     <p>{{time}}</p>
