--- a/enroll/templates/sorry.html
+++ b/enroll/templates/sorry.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-    <h1>Error</h1>
+    <h1>We feel sorry but there is some error occur.</h1>
 
+    <p>Don't submit duplicate information with other students.</p>
+    <a href="/enroll">Back</a>
 </body>
 
