--- a/enroll/templates/thanks.html
+++ b/enroll/templates/thanks.html
@@ -7,6 +7,10 @@
 
 <body>
     <h1>You have enrolled successfully!</h1>
-
+    <p>You can login in now</p>
+    <p>The username is your email, and the password is your student code. </p> 
+    <p>You can login to change your profile.</p>
+</br>
+    <a href="\accouts\login">Login now.</a> 
 </body>
 
