--- a/account/templates/base_generic.html
+++ b/account/templates/base_generic.html
@@ -1,1 +1,3 @@
-<h1>Dashboard</h1>
+<a href="/dashboard/">Dashboard</h1>
+<a href="password_reset/">Change your password</a>
+<a href="logout/">Logout</a>
