通宵完毕 我要死了= =

--- a/account/templates/logout.html
+++ b/account/templates/logout.html
@@ -7,5 +7,5 @@
 
 <body>
     <h1>Lougout, see you!</h1>
-    <a href="/account/login/">login again</a>
+    <a href="/accounts/login/">login again</a>
 </body>
