--- a/enroll/templates/thanks.html
+++ b/enroll/templates/thanks.html
@@ -11,6 +11,6 @@
     <p>The username is your email, and the password is your student code. </p> 
     <p>You can login to change your profile.</p>
 </br>
-    <a href="\accouts\login">Login now.</a> 
+    <a href="\accounts\login">Login now.</a> 
 </body>
 
