--- a/enroll/templates/enroll.html
+++ b/enroll/templates/enroll.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         {{ form }}
     </br>
-        <input type="submit" value="提交">
+        <input type="submit" value="submit">
     </form>
 </body>
 
